--- a/.gitmodules
+++ b/.gitmodules
@@ -105,3 +105,6 @@
 [submodule "src/lib/rl_tools/rl_tools"]
 	path = src/lib/rl_tools/rl_tools
 	url = https://github.com/rl-tools/rl-tools.git
+[submodule "Tools/simulation/gz"]
+	path = Tools/simulation/gz
+	url = https://github.com/hertel-robotics/PX4-gazebo-models.git
